--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,5 +1,17 @@
-<h1>Update Profile</h1>
-<form action="/profile" method="POST">
-    New Email: <input name="email">
-    <button type="submit">Update</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <h1>Update Profile</h1>
+    <form action="/profile" method="POST">
+        New Email: <input name="email">
+        <button type="submit">Update</button>
+    </form>
+    <p style="text-align: center;"><a href="/dashboard" style="text-decoration:none;"><button type="button">Back</button></a></p>
+</body>
+</html>
